UserService/Registre-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - name: http
    targetPort: 8082
    port: 80
  selector:
    app: user
