UserService/Registre-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: user.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: user
          servicePort: http
